--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Empresa Telecom</title>
+  <title>SH COMPANY SAS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/denuncias.css">
 </head>
-<body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3">
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
     <div class="container">
-      <a class="navbar-brand" href="#">SH COMPANY</a>
+      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="./image/logo.png" alt="SH Company Logo" height="50">
+        <span>SH COMPANY</span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,61 +32,55 @@
       </div>
     </div>
   </nav>
-<section class="hero-section">
-  <!-- Carrusel de imágenes y video -->
-<div id="heroCarrusel" class="carousel slide" data-bs-ride="carousel">   
-  
-  <div class="carousel-inner">
 
-    <!-- Slide 1: Video con texto encima -->
-    <div class="carousel-item active position-relative">
-      <div class="ratio ratio-16x9">
-        <video autoplay muted loop playsinline>
-          <source src="./image/video2_V1 (1).webm" type="video/webm">
-          Tu navegador no soporta video HTML5.
-        </video>
+  <section class="hero-section">
+    <div id="heroCarrusel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active position-relative">
+          <img src="./image/carrusel3.jpg" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
+              <div class="carousel-caption-custom">
+            <h1 class="fw-bold display-5">Conéctate sin límites</h1>
+            <p class="lead">Internet veloz y confiable para tu hogar o empresa</p>
+            <a href="#planes" class="btn-elegante mt-2">Ver planes</a>
+          </div>
+          <div class="overlay"></div>
+    
+        </div>
+
+        <div class="carousel-item position-relative">
+          <img src="./image/carrusel2.jpg" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
+          <div class="overlay"></div>
+          <div class="carousel-caption-custom">
+            <h1 class="fw-bold display-5">Internet de Fibra Óptica de Alta Velocidad</h1>
+            <p class="lead">Conexiones estables, ideales para estudiar, trabajar y hacer streaming sin interrupciones.</p>
+          </div>
+        </div>
+
+        <div class="carousel-item position-relative">
+          <img src="./image/carrusel1.jpg" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 2">
+          <div class="overlay"></div>
+          <div class="carousel-caption-custom">
+            <h1 class="fw-bold display-5">Tecnología al alcance de todos</h1>
+            <p class="lead">Cobertura en múltiples zonas urbanas y rurales</p>
+          </div>
+        </div>
       </div>
 
-      <!-- Texto encima del video -->
-      <div class="position-absolute top-50 start-50 translate-middle text-center text-white px-3 ">
-        <h1 class="fw-bold display-5">Conéctate sin límites</h1>
-        <p class="lead  ">Internet veloz y confiable para tu hogar o empresa</p>
-        <a href="#planes" class="btn btn-light btn-lg mt-2">Ver planes</a>
+      <button class="carousel-control-prev" type="button" data-bs-target="#heroCarrusel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#heroCarrusel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#heroCarrusel" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#heroCarrusel" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#heroCarrusel" data-bs-slide-to="2"></button>
       </div>
     </div>
+  </section>
 
-    <!-- Slide 2: Imagen -->
-    <div class="carousel-item">
-      <img src="./image/img1.jpeg" class="d-block w-100" alt="Banner 1">
-    </div>
-
-    <!-- Slide 3: Imagen -->
-    <div class="carousel-item">
-      <img src="./image/img2.jpeg" class="d-block w-100" alt="Banner 2">
-    </div>
-
-  </div>
-
-  <!-- Controles -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#heroCarrusel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#heroCarrusel" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
-  <!-- Indicadores -->
-  <div class="carousel-indicators position-absolute -buttom-40">
-    <button type="button" data-bs-target="#heroCarrusel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#heroCarrusel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#heroCarrusel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-
-
-</div>
-
-</section>
-
-  <!-- Sección de planes -->
   <section class="py-5" id="planes">
     <div class="container">
       <h2 class="text-center mb-4">Nuestros Planes</h2>
@@ -91,7 +91,7 @@
               <h5 class="card-title">Plan Básico</h5>
               <p>30 Mbps • Ideal para navegar y redes sociales</p>
               <h3>$49.900</h3>
-              <a href="#" class="btn btn-primary">Contratar</a>
+              <a href="#" class="btn-elegante">Contratar</a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
               <h5 class="card-title">Plan Plus</h5>
               <p>100 Mbps • Streaming y videollamadas</p>
               <h3>$79.900</h3>
-              <a href="#" class="btn btn-primary">Contratar</a>
+              <a href="#" class="btn-elegante">Contratar</a>
             </div>
           </div>
         </div>
@@ -111,15 +111,153 @@
               <h5 class="card-title">Plan Empresarial</h5>
               <p>300 Mbps • Alto rendimiento y soporte 24/7</p>
               <h3>$129.900</h3>
-              <a href="#" class="btn btn-primary">Contratar</a>
+              <a href="#" class="btn-elegante">Contratar</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+<!-- Zona de cobertura -->
+<section id="cobertura" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center mb-5">Zonas de Cobertura</h2>
+    <div class="row g-4 justify-content-center">
 
-  <!-- Scripts -->
+      <!-- Ayapel -->
+      <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+        <div class="cobertura-card text-center">
+          <!-- Imagen encima -->
+          <img src="./image/ayapel.jpeg" alt="Ayapel" class="img-fluid rounded-top mb-3 cobertura-img">
+          
+          <div class="mb-3">
+            <i class="bi bi-map-fill" style="font-size: 2rem; color: #f25c05;"></i>
+          </div>
+          <h3 class="mb-3">AYAPEL</h3>
+          <div class="cobertura-info">
+            <p>Carrera 25a #7a-12</p>
+            <p>Barrio: La Inmaculada</p>
+            <p>+57 3101234567</p>
+          </div>
+          <a href="#" class="btn btn-elegante mt-3">Ver más</a>
+        </div>
+      </div>
+
+      <!-- Las Delicias -->
+      <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+        <div class="cobertura-card text-center">
+          <!-- Imagen encima -->
+          <img src="./image/ayapel.jpeg" alt="Las Delicias" class="img-fluid rounded-top mb-3 cobertura-img">
+
+          <div class="mb-3">
+            <i class="bi bi-map-fill" style="font-size: 2rem; color: #e6671d;"></i>
+          </div>
+          <h3 class="mb-3">LAS DELICIAS</h3>
+          <div class="cobertura-info">
+            <p>Carrera 25a #7a-12</p>
+            <p>Barrio: La Inmaculada</p>
+            <p>+57 3101234567</p>
+          </div>
+          <a href="#" class="btn btn-elegante mt-3">Ver más</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  <section class="py-5 text-center text-white bg-dark" id="testimonios">
+    <div class="container">
+      <h2 class="mb-4">Lo que dicen nuestros clientes</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <blockquote class="blockquote">
+            <p>"Desde que contratamos SH Company, el internet nunca ha fallado. El mejor servicio que hemos tenido."</p>
+            <footer class="blockquote-footer text-white">Carlos Gutiérrez</footer>
+          </blockquote>
+        </div>
+        <div class="col-md-4">
+          <blockquote class="blockquote">
+            <p>"Excelente atención al cliente y soporte inmediato. Muy recomendados."</p>
+            <footer class="blockquote-footer text-white">María Fernanda</footer>
+          </blockquote>
+        </div>
+        <div class="col-md-4">
+          <blockquote class="blockquote">
+            <p>"Trabajo desde casa y nunca he tenido problemas con la velocidad. 10/10."</p>
+            <footer class="blockquote-footer text-white">Luis Mendoza</footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <!-- denuncias -->
+  <section class="py-5 bg-light" id="denuncias">
+  <div class="container">
+    <h2 class="text-center mb-5">Puedes presentar denuncias por pornografía infantil en los siguientes enlaces</h2>
+    <div class="row g-4 justify-content-center">
+      <div class="col-md-6 col-lg-3 d-flex">
+        <div class="denuncia-card text-center w-100">
+          <img src="./image/bienestar.png" alt="Bienestar Familiar">
+          <a href="https://www.icbf.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 d-flex">
+        <div class="denuncia-card text-center w-100">
+          <img src="./image/policia.jpg" alt="Centro Cibernético Policial">
+          <a href="https://caivirtual.policia.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 d-flex">
+        <div class="denuncia-card text-center w-100">
+          <img src="./image/entic.png" alt="En TIC Confío">
+          <a href="https://www.enticconfio.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 d-flex">
+        <div class="denuncia-card text-center w-100">
+          <img src="./image/fiscalia.jpg" alt="Fiscalía General de la Nación">
+          <a href="https://www.fiscalia.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <section class="py-5 bg-light" id="contacto">
+    <div class="container">
+      <h2 class="text-center mb-4">Contáctanos</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <form>
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
+            </div>
+            <div class="mb-3">
+              <label for="correo" class="form-label">Correo Electrónico</label>
+              <input type="email" class="form-control" id="correo" placeholder="nombre@ejemplo.com">
+            </div>
+            <div class="mb-3">
+              <label for="mensaje" class="form-label">Mensaje</label>
+              <textarea class="form-control" id="mensaje" rows="4" placeholder="Tu mensaje..."></textarea>
+            </div>
+            <button type="submit" class="btn-elegante">Enviar mensaje</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="text-center text-white py-4" style="background-color: #0f0f0f">
+    <div class="container">
+      <p class="mb-0">&copy; 2025 SH COMPANY SAS. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
