Subida de todos los cambios del proyeco

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="heroCarrusel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active position-relative">
-          <img src="./image/carrusel3.jpg" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
+          <img src="./image/ayapel.png" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
               <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Conéctate sin límites</h1>
             <p class="lead">Internet veloz y confiable para tu hogar o empresa</p>
@@ -161,7 +161,6 @@
           <a href="#" class="btn btn-elegante mt-3">Ver más</a>
         </div>
       </div>
-
     </div>
   </div>
 </section>
@@ -193,7 +192,7 @@
   </section>
 
     <!-- denuncias -->
-  <section class="py-5 bg-light" id="denuncias">
+<section class="py-5 bg-light" id="denuncias">
   <div class="container">
     <h2 class="text-center mb-5">Puedes presentar denuncias por pornografía infantil en los siguientes enlaces</h2>
     <div class="row g-4 justify-content-center">
@@ -212,18 +211,102 @@
       <div class="col-md-6 col-lg-3 d-flex">
         <div class="denuncia-card text-center w-100">
           <img src="./image/entic.png" alt="En TIC Confío">
-          <a href="https://www.enticconfio.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
+          <a href="https://ciberpaz.gov.co/portal/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
         </div>
       </div>
       <div class="col-md-6 col-lg-3 d-flex">
         <div class="denuncia-card text-center w-100">
           <img src="./image/fiscalia.jpg" alt="Fiscalía General de la Nación">
-          <a href="https://www.fiscalia.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
+          <a href="https://www.fiscalia.gov.co/colombia/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
         </div>
       </div>
     </div>
   </div>
 </section>
+    <!-- neutralidad -->
+<section class="neutralidad py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center fw-bold text-orange mb-5 display-6">Comprometidos con la Neutralidad de Internet</h2>
+
+    <!-- Bloques de tarjetas informativas -->
+    <div class="row g-4 justify-content-center">
+      <div class="col-md-4">
+        <div class="neutral-card text-center p-4 shadow-sm">
+          <div class="icon-box mb-3">
+            <i class="bi bi-shield-lock-fill text-orange fs-1"></i>
+          </div>
+          <h5 class="fw-bold mb-2">Sin bloqueos injustificados</h5>
+          <p class="text-muted mb-0">
+            No realizamos bloqueo de contenidos, salvo por mandato legal como lo establece la Ley 679 de 2001.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="neutral-card text-center p-4 shadow-sm">
+          <div class="icon-box mb-3">
+            <i class="bi bi-graph-up-arrow text-orange fs-1"></i>
+          </div>
+          <h5 class="fw-bold mb-2">Tráfico justo y equilibrado</h5>
+          <p class="text-muted mb-0">
+            Aplicamos gestión de tráfico de forma razonable, sin privilegios para ningún proveedor o servicio.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="neutral-card text-center p-4 shadow-sm">
+          <div class="icon-box mb-3">
+            <i class="bi bi-globe2 text-orange fs-1"></i>
+          </div>
+          <h5 class="fw-bold mb-2">Libre acceso garantizado</h5>
+          <p class="text-muted mb-0">
+            No se limita el acceso ni se prioriza, degrada o bloquea contenido alguno, salvo por razones técnicas o de seguridad.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Enlaces adicionales -->
+    <div class="row text-center text-md-start mt-5">
+      <!-- Atención al Cliente -->
+      <div class="col-md-4 mb-4">
+        <h5 class="seccion-titulo text-orange mb-3">Atención al Cliente</h5>
+        <ul class="footer-links list-unstyled">
+          <li><a href="#">Control Parental</a></li>
+          <li><a href="#">Indicadores de calidad</a></li>
+          <li><a href="#">Atención al Usuario</a></li>
+          <li><a href="#">Prevención de fraudes</a></li>
+          <li><a href="#">Limitación de velocidad</a></li>
+          <li><a href="#">Gestión de tráfico</a></li>
+          <li><a href="#">Cancelación de servicios</a></li>
+        </ul>
+      </div>
+
+      <!-- Sobre Nosotros -->
+      <div class="col-md-4 mb-4">
+        <h5 class="seccion-titulo text-orange mb-3">Sobre Nosotros</h5>
+        <ul class="footer-links list-unstyled">
+          <li><a href="#">Topología de la red</a></li>
+          <li><a href="#">Acceso a internet</a></li>
+        </ul>
+      </div>
+
+      <!-- Regulación y Leyes -->
+      <div class="col-md-4 mb-4">
+        <h5 class="seccion-titulo text-orange mb-3">Regulación y Leyes</h5>
+        <ul class="footer-links list-unstyled">
+          <li><a href="#">Términos y condiciones</a></li>
+          <li><a href="#">Política de equipos</a></li>
+          <li><a href="#">Compensación automática</a></li>
+          <li><a href="#">Seguridad en la red</a></li>
+          <li><a href="#">Contrato de servicios</a></li>
+          <li><a href="#">Resolución 5111 de 2017</a></li>
+          <li><a href="#">Denuncias de pornografía infantil</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
   <section class="py-5 bg-light" id="contacto">
