--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="./css/denuncias.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="./image/logo.png" alt="SH Company Logo" height="50">
+        <img src="./image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
         <span>SH COMPANY</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -191,6 +190,7 @@
     </div>
   </section>
 
+    <!-- -------------------------------------------------------------------------------->
     <!-- denuncias -->
 <section class="py-5 bg-light" id="denuncias">
   <div class="container">
@@ -307,7 +307,7 @@
   </div>
 </section>
 
-
+  <!-- -------------------------------------------------------------------------------->
 
   <section class="py-5 bg-light" id="contacto">
     <div class="container">
@@ -334,11 +334,56 @@
     </div>
   </section>
 
-  <footer class="text-center text-white py-4" style="background-color: #0f0f0f">
-    <div class="container">
-      <p class="mb-0">&copy; 2025 SH COMPANY SAS. Todos los derechos reservados.</p>
+
+  <!-- Footer final  -->
+<footer class="footer-institucional py-4 border-top">
+  <div class="container">
+    <div class="row align-items-center text-center text-md-start">
+
+      <!-- Logo -->
+      <div class="col-md-3 mb-3 mb-md-0">
+        <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+      </div>
+
+      <!-- Información institucional -->
+      <div class="col-md-5 mb-3 mb-md-0">
+        <small class="text-muted d-block">
+          Comisión de Regulación de Comunicaciones<br>
+          Dirección: Calle 59A bis No. 5-53 Edificio Link Siete Piso 9<br>
+          Bogotá D.C.<br>
+          Horario de Atención: Lunes a Viernes 8:30 a.m. a 5:30 p.m
+        </small>
+      </div>
+
+      <!-- Información de contacto -->
+      <div class="col-md-4">
+        <small class="text-muted d-block">
+          Cra. 8a entre calles 12A y 12B Bogotá<br>
+          Tel: +57 (1) 344 34 60<br>
+          Línea Gratuita: 01-800-0914014<br>
+          Línea Anticorrupción: 01-800-0912667<br>
+          Correo: <a href="mailto:minticresponde@mintic.gov.co" class="text-decoration-none text-danger">minticresponde@mintic.gov.co</a><br>
+          <a href="https://www.mintic.gov.co/" target="_blank" class="text-decoration-none">www.mintic.gov.co</a>
+        </small>
+      </div>
     </div>
-  </footer>
+
+    <!-- Logos adicionales -->
+    <div class="row mt-4 text-center">
+      <div class="col-md-4 mb-3">
+        <img src="./image/comunicados-logo.png" alt="Comunicados Como Es" class="img-fluid" style="max-height: 200px;">
+      </div>
+      <div class="col-md-4 mb-3">
+        <img src="./image/mintic-logo.png" alt="MinTIC" class="img-fluid" style="max-height: 60px;">
+      </div>
+      <div class="col-md-4 mb-3">
+        <p class="text-muted small mt-2">
+          Copyright © 2025 SH COMPANY SAS. Todos los derechos reservados.<br>
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
