--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#Empesa">Empresa</a></li>
           <li class="nav-item"><a class="nav-link" href="#planes">Planes</a></li>
           <li class="nav-item"><a class="nav-link" href="#cobertura">Cobertura</a></li>
           <li class="nav-item"><a class="nav-link" href="#testimonios">Clientes</a></li>
@@ -163,32 +164,44 @@
     </div>
   </div>
 </section>
+    <!-- -------------------------------------------------------------------------------->
 
-  <section class="py-5 text-center text-white bg-dark" id="testimonios">
-    <div class="container">
-      <h2 class="mb-4">Lo que dicen nuestros clientes</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <blockquote class="blockquote">
-            <p>"Desde que contratamos SH Company, el internet nunca ha fallado. El mejor servicio que hemos tenido."</p>
-            <footer class="blockquote-footer text-white">Carlos Gutiérrez</footer>
-          </blockquote>
+<section class="py-5 bg-dark text-white" id="testimonios">
+  <div class="container">
+    <h2 class="mb-5 fw-bold text-orange text-center">
+      <i class="bi bi-chat-left-quote-fill me-2"></i>Lo que dicen nuestros clientes
+    </h2>
+    <div class="row g-4">
+      <!-- Testimonio 1 -->
+      <div class="col-md-4">
+        <div class="bg-secondary rounded-4 p-4 h-100 shadow-lg">
+          <p class="fs-5 fst-italic">“Desde que contratamos SH Company, el internet nunca ha fallado. El mejor servicio que hemos tenido.”</p>
+          <hr class="border-light opacity-25">
+          <h6 class="mb-0">Carlos Gutiérrez</h6>
+          <small class="text-muted">Cliente empresarial</small>
         </div>
-        <div class="col-md-4">
-          <blockquote class="blockquote">
-            <p>"Excelente atención al cliente y soporte inmediato. Muy recomendados."</p>
-            <footer class="blockquote-footer text-white">María Fernanda</footer>
-          </blockquote>
+      </div>
+      <!-- Testimonio 2 -->
+      <div class="col-md-4">
+        <div class="bg-secondary rounded-4 p-4 h-100 shadow-lg">
+          <p class="fs-5 fst-italic">“Excelente atención al cliente y soporte inmediato. Muy recomendados.”</p>
+          <hr class="border-light opacity-25">
+          <h6 class="mb-0">María Fernanda</h6>
+          <small class="text-muted">Emprendedora digital</small>
         </div>
-        <div class="col-md-4">
-          <blockquote class="blockquote">
-            <p>"Trabajo desde casa y nunca he tenido problemas con la velocidad. 10/10."</p>
-            <footer class="blockquote-footer text-white">Luis Mendoza</footer>
-          </blockquote>
+      </div>
+      <!-- Testimonio 3 -->
+      <div class="col-md-4">
+        <div class="bg-secondary rounded-4 p-4 h-100 shadow-lg">
+          <p class="fs-5 fst-italic">“Trabajo desde casa y nunca he tenido problemas con la velocidad. 10/10.”</p>
+          <hr class="border-light opacity-25">
+          <h6 class="mb-0">Luis Mendoza</h6>
+          <small class="text-muted">Desarrollador remoto</small>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
     <!-- -------------------------------------------------------------------------------->
     <!-- denuncias -->
