--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
   <section class="hero-section">
     <div id="heroCarrusel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
+
+            <div class="carousel-item position-relative">
+              <video class="w-100 h-100 object-fit-cover rounded-bottom" autoplay muted loop playsinline>
+              <source src="./image/Video4.mp4" type="video/mp4">
+              Tu navegador no soporta el elemento de video.
+              </video>
+                <div class="overlay"></div>
+              <div class="carousel-caption-custom">
+                <h1 class="fw-bold display-5">Conectividad sin límites</h1>
+                <p class="lead">Explora nuestra red con calidad y velocidad garantizada</p>
+          </div>
+        </div>
+        
         <div class="carousel-item active position-relative">
           <img src="./image/ayapel.png" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
               <div class="carousel-caption-custom">
@@ -48,16 +61,15 @@
         </div>
 
         <div class="carousel-item position-relative">
-          <img src="./image/carrusel2.jpg" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
+          <img src="./image/carrusel1.png" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 1">
           <div class="overlay"></div>
           <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Internet de Fibra Óptica de Alta Velocidad</h1>
-            <p class="lead">Conexiones estables, ideales para estudiar, trabajar y hacer streaming sin interrupciones.</p>
           </div>
         </div>
 
         <div class="carousel-item position-relative">
-          <img src="./image/carrusel1.jpg" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 2">
+          <img src="./image/carrusel3.png" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 2">
           <div class="overlay"></div>
           <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Tecnología al alcance de todos</h1>
